--- a/ia.html
+++ b/ia.html
@@ -8,8 +8,7 @@
     <meta name="description" content="Jorge Souza Oliveira dos Santos">
     <meta name="keywords" content="informatica, curso, computador, computacao, programação, tecnologia, info,  desenvolvimento, web, design, web design, design grafico, tech,  visual studio, visual studio code, vs code, c#, javascript, dotnet, node js, dev express, html, css">
     <!-- #endregion -->
-    <link rel="stylesheet" href="jorge.css">
-    <script type="module" src="jorge.js"></script>
+    <script type="module" src="../jorge.js"></script>
     <link rel="stylesheet" href="https://kaatan.azurewebsites.net/lib/acacia/acacia.css">
     <script type="module" src="https://kaatan.azurewebsites.net/lib/acacia/acacia.js"></script>
     <title></title>
@@ -70,6 +69,5 @@
         ProfileSection: {}
     }
     // new Acacia(appName, hideBottomBar, sideMenuContent, callback)
-    const acacia = new Acacia("CHECKOUT | Jorge Souza", true, sideMenu, () => { App.Main(App.Checkout) });
-
+    const acacia = new Acacia("IA | Jorge Souza", true, sideMenu, () => { App.Main(App.IA.Learn) });
 </script>
