--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- #endregion -->
     <link rel="stylesheet" href="jorge.css">
     <script type="module" src="jorge.js"></script>
+    <link rel="shortcut icon" href="https://www.jorgesouza.com.br/files/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://kaatan.azurewebsites.net/lib/acacia/acacia.css">
     <script type="module" src="https://kaatan.azurewebsites.net/lib/acacia/acacia.js"></script>
     <title>Jorge Souza</title>
@@ -27,17 +28,17 @@
             // Add more menu-items freely:
             {
                 LinkTile: "Início",
-                LinkIcon: "files/home.svg",
+                LinkIcon: "https://kaatan.azurewebsites.net/files/home.svg",
                 LinkAction: () => { window.location = '/' }
             },
             {
                 LinkTile: "Blog",
-                LinkIcon: "files/blog.svg",
+                LinkIcon: "https://kaatan.azurewebsites.net/files/news.svg",
                 LinkAction: App.Blog
             },
             {
                 LinkTile: "Cursos",
-                LinkIcon: "files/learn.svg",
+                LinkIcon: "https://kaatan.azurewebsites.net/files/learn.svg",
                 LinkAction: App.Learn
             },
             {
@@ -52,7 +53,7 @@
             },
             {
                 LinkTile: "Comunidade",
-                LinkIcon: "files/chat.svg",
+                LinkIcon: "https://www.jorgesouza.com.br/files/chat.svg",
                 LinkAction: App.Community
             },
             {
@@ -62,7 +63,7 @@
             },
             {
                 LinkTile: "Contato",
-                LinkIcon: "files/contacts.svg",
+                LinkIcon: "https://kaatan.azurewebsites.net/files/contacts.svg",
                 LinkAction: App.Contact
             },
         ],
