--- a/contato.html
+++ b/contato.html
@@ -27,17 +27,17 @@
             // Add more menu-items freely:
             {
                 LinkTile: "Início",
-                LinkIcon: "files/home.svg",
+                LinkIcon: "https://www.jorgesouza.com.br/files/home.svg",
                 LinkAction: () => { window.location = '/' }
             },
             {
                 LinkTile: "Blog",
-                LinkIcon: "files/blog.svg",
+                LinkIcon: "https://www.jorgesouza.com.br/files/blog.svg",
                 LinkAction: App.Blog
             },
             {
                 LinkTile: "Cursos",
-                LinkIcon: "files/learn.svg",
+                LinkIcon: "https://www.jorgesouza.com.br/files/learn.svg",
                 LinkAction: App.Learn
             },
             {
@@ -52,17 +52,17 @@
             },
             {
                 LinkTile: "Comunidade",
-                LinkIcon: "files/chat.svg",
+                LinkIcon: "https://www.jorgesouza.com.br/files/chat.svg",
                 LinkAction: App.Community
             },
             {
                 LinkTile: "Educação Digital",
-                LinkIcon: "files/pc.svg",
+                LinkIcon: "https://www.jorgesouza.com.br/files/pc.svg",
                 LinkAction: () => Modal.Message("Em breve...", "Retorne em breve para mais novidades.")
             },
             {
                 LinkTile: "Contato",
-                LinkIcon: "files/contacts.svg",
+                LinkIcon: "https://www.jorgesouza.com.br/files/contacts.svg",
                 LinkAction: App.Contact
             },
         ],
