--- a/ia.html
+++ b/ia.html
@@ -57,7 +57,7 @@
             {
                 LinkTile: "Educação Digital",
                 LinkIcon: "https://www.jorgesouza.com.br/files/pc.svg",
-                LinkAction: () => Modal.Message("Em breve...", "Retorne em breve para mais novidades.")
+                LinkAction: App.Digital
             },
             {
                 LinkTile: "Contato",
