--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             {
                 LinkTile: "Educação Digital",
                 LinkIcon: "files/pc.svg",
-                LinkAction: () => Modal.Message("Em breve...", "Retorne em breve para mais novidades.")
+                LinkAction: App.Digital
             },
             {
                 LinkTile: "Contato",
