--- a/game/index.html
+++ b/game/index.html
@@ -1,4 +1,4 @@
-<link rel="shortcut icon" href="https://www.jorgesouza.com.br/files/logo.svg" type="image/x-icon">
+<link rel="shortcut icon" href="/files/logo.svg" type="image/x-icon">
 <link rel="stylesheet" href="game.css">
 <script src="game.js"></script>
 <div id="jogo">
