--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- #endregion -->
     <link rel="stylesheet" href="jorge.css">
     <script type="module" src="jorge.js"></script>
-    <link rel="shortcut icon" href="https://www.jorgesouza.com.br/files/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/files/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://kaatan.azurewebsites.net/lib/acacia/acacia.css">
     <script type="module" src="https://kaatan.azurewebsites.net/lib/acacia/acacia.js"></script>
     <title>Jorge Souza</title>
@@ -53,7 +53,7 @@
             },
             {
                 LinkTile: "Comunidade",
-                LinkIcon: "https://www.jorgesouza.com.br/files/chat.svg",
+                LinkIcon: "/files/chat.svg",
                 LinkAction: App.Community
             },
             {
