--- a/digital/index.html
+++ b/digital/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Segurança Digital para a Família</title>
+    <link rel="shortcut icon" href="/files/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 
