--- a/livros.html
+++ b/livros.html
@@ -10,6 +10,7 @@
     <!-- #endregion -->
     <link rel="stylesheet" href="jorge.css">
     <script type="module" src="jorge.js"></script>
+    <link rel="shortcut icon" href="/files/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://kaatan.azurewebsites.net/lib/acacia/acacia.css">
     <script type="module" src="https://kaatan.azurewebsites.net/lib/acacia/acacia.js"></script>
     <title></title>
