--- a/certificado.html
+++ b/certificado.html
@@ -8,69 +8,12 @@
     <meta name="description" content="Jorge Souza Oliveira dos Santos">
     <meta name="keywords" content="informatica, curso, computador, computacao, programação, tecnologia, info,  desenvolvimento, web, design, web design, design grafico, tech,  visual studio, visual studio code, vs code, c#, javascript, dotnet, node js, dev express, html, css">
     <!-- #endregion -->
-    <link rel="stylesheet" href="jorge.css">
-    <link rel="shortcut icon" href="/files/logo.svg" type="image/x-icon">
-    <script type="module" src="jorge.js"></script>
-    <link rel="stylesheet" href="https://kaatan.azurewebsites.net/lib/acacia/acacia.css">
-    <script type="module" src="https://kaatan.azurewebsites.net/lib/acacia/acacia.js"></script>
     <title>Jorge Souza</title>
 </head>
 
 <body></body>
 
 </html>
-
-<script type="module">
-    import { Acacia } from "https://kaatan.azurewebsites.net/lib/acacia/acacia.js";
-    Renderer.Layout.IsPortraitLayout = true;
-    const sideMenu = {
-        Links: [
-            // Add more menu-items freely:
-            {
-                LinkTile: "Início",
-                LinkIcon: "/files/home.svg",
-                LinkAction: () => { window.location = '/' }
-            },
-            {
-                LinkTile: "Blog",
-                LinkIcon: "/files/blog.svg",
-                LinkAction: App.Blog
-            },
-            {
-                LinkTile: "Cursos",
-                LinkIcon: "/files/learn.svg",
-                LinkAction: App.Learn
-            },
-            {
-                LinkTile: "Livros",
-                LinkIcon: "https://kaatan.azurewebsites.net/files/learn.svg",
-                LinkAction: App.Books
-            },
-            {
-                LinkTile: "Kaatan",
-                LinkIcon: "https://kaatan.azurewebsites.net/files/logo128.png",
-                LinkAction: () => window.open('https://www.kaatan.com.br')
-            },
-            {
-                LinkTile: "Comunidade",
-                LinkIcon: "/files/chat.svg",
-                LinkAction: App.Community
-            },
-            {
-                LinkTile: "Educação Digital",
-                LinkIcon: "/files/pc.svg",
-                LinkAction: App.Digital
-            },
-            {
-                LinkTile: "Contato",
-                LinkIcon: "/files/contacts.svg",
-                LinkAction: App.Contact
-            },
-        ],
-        ShowProfileSection: false,
-        ProfileSection: {}
-    }
-    // new Acacia(appName, hideBottomBar, sideMenuContent, callback)
-    const acacia = new Acacia("CURSOS | Jorge Souza", true, sideMenu, () => { App.Main(App.Learn) });
-
+<script>
+    window.location.href = "/digital/certificado.html";
 </script>
