--- a/certificado.html
+++ b/certificado.html
@@ -10,7 +10,15 @@
     <!-- #endregion -->
     <title>Jorge Souza</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CJMWP92WDY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-CJMWP92WDY');
+</script>
 <body></body>
 
 </html>
