--- a/digital/certificado.html
+++ b/digital/certificado.html
@@ -8,7 +8,15 @@
     <link rel="shortcut icon" href="/files/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CJMWP92WDY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-CJMWP92WDY');
+</script>
 <body></body>
 
 </html>
