--- a/game/index.html
+++ b/game/index.html
@@ -1,6 +1,15 @@
 <link rel="shortcut icon" href="/files/logo.svg" type="image/x-icon">
 <link rel="stylesheet" href="game.css">
 <script src="game.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CJMWP92WDY"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-CJMWP92WDY');
+</script>
 <div id="jogo">
     <div id="info">
         <span id="titulo">CAÇA AO MONSTRO</span>
