--- a/ia.html
+++ b/ia.html
@@ -15,13 +15,13 @@
     <title></title>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CJMWP92WDY"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-11BXC8WWKC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-CJMWP92WDY');
+  gtag('config', 'G-11BXC8WWKC');
 </script>
 <body></body>
 
