--- a/community/index.html
+++ b/community/index.html
@@ -16,7 +16,7 @@
     <script type="module" src="https://kaatan.azurewebsites.net/lib/acacia/acacia.js"></script>
     <title>Comunidade | Jorge Souza</title>
 </head>
-<!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js)
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-11BXC8WWKC"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
@@ -25,7 +25,7 @@
 
     gtag('config', 'G-11BXC8WWKC');
 </script>
-
+ -->
 <body></body>
 
 </html>
@@ -48,9 +48,9 @@
             },
         ],
         ShowProfileSection: false,
-        ProfileSection: {}
+        ProfileSection: null,
     }
     // new Acacia(appName, hideBottomBar, sideMenuContent, callback)
-    const acacia = new Acacia("Jorge Souza", true, sideMenu, () => { App.Main() });
+    const acacia = new Acacia("Comunidade | Jorge Souza", true, sideMenu, () => { Community.Main() });
 
 </script>
