--- a/contato.html
+++ b/contato.html
@@ -50,18 +50,13 @@
                 LinkAction: App.Learn
             },
             {
-                LinkTile: "Livros",
-                LinkIcon: "https://kaatan.azurewebsites.net/files/learn.svg",
-                LinkAction: App.Books
-            },
-            {
                 LinkTile: "Kaatan",
                 LinkIcon: "https://kaatan.azurewebsites.net/files/logo128.png",
                 LinkAction: () => window.open('https://www.kaatan.com.br')
             },
             {
                 LinkTile: "Comunidade",
-                LinkIcon: "/files/chat.svg",
+                LinkIcon: "https://kaatan.azurewebsites.net/files/comunity.svg",
                 LinkAction: App.Community
             },
             {
