--- a/projetos.html
+++ b/projetos.html
@@ -52,6 +52,11 @@
                 LinkAction: App.Learn
             },
             {
+                LinkTile: "Projetos",
+                LinkIcon: "https://kaatan.azurewebsites.net/files/motion.svg",
+                LinkAction: App.Learn
+            },
+            {
                 LinkTile: "Kaatan",
                 LinkIcon: "https://kaatan.azurewebsites.net/files/logo128.png",
                 LinkAction: () => window.open('https://www.kaatan.com.br')
