--- a/projetos.html
+++ b/projetos.html
@@ -81,6 +81,6 @@
         ProfileSection: {}
     }
     // new Acacia(appName, hideBottomBar, sideMenuContent, callback)
-    const acacia = new Acacia("COMUNIDADE | Jorge Souza", true, sideMenu, () => { App.Main(App.Projects) });
+    const acacia = new Acacia("PROJETOS | Jorge Souza", true, sideMenu, () => { App.Main(App.Projects) });
 
 </script>
