--- a/ia.html
+++ b/ia.html
@@ -49,6 +49,11 @@
                 LinkAction: App.Learn
             },
             {
+                LinkTile: "Projetos",
+                LinkIcon: "https://kaatan.azurewebsites.net/files/motion.svg",
+                LinkAction: App.Projects
+            },
+            {
                 LinkTile: "Kaatan",
                 LinkIcon: "https://kaatan.azurewebsites.net/files/logo128.png",
                 LinkAction: () => window.open('https://www.kaatan.com.br')
