--- a/projetos.html
+++ b/projetos.html
@@ -54,7 +54,7 @@
             {
                 LinkTile: "Projetos",
                 LinkIcon: "https://kaatan.azurewebsites.net/files/motion.svg",
-                LinkAction: App.Learn
+                LinkAction: App.Projects
             },
             {
                 LinkTile: "Kaatan",
