--- a/livros.html
+++ b/livros.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="jorge.css">
     <script type="module" src="jorge.js"></script>
     <link rel="shortcut icon" href="/files/logo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="https://kaatan.azurewebsites.net/lib/acacia/acacia.css">
-    <script type="module" src="https://kaatan.azurewebsites.net/lib/acacia/acacia.js"></script>
+    <link rel="stylesheet" href="/lib/acacia/acacia.css">
+    <script type="module" src="/lib/acacia/acacia.js"></script>
     <title></title>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -29,7 +29,7 @@
 </html>
 
 <script type="module">
-    import { Acacia } from "https://kaatan.azurewebsites.net/lib/acacia/acacia.js";
+    import { Acacia } from "/lib/acacia/acacia.js";
     Renderer.Layout.IsPortraitLayout = true;
     const sideMenu = {
         Links: [
